--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ android:
     - sys-img-armeabi-v7a-android-19
     - sys-img-x86-android-17
   licenses:
-    - 'android-sdk-preview-license-52d11cd2'
+    - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
 before_script:
@@ -31,3 +31,5 @@ before_script:
     - emulator -avd test -no-skin -no-audio -no-window &
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
+before_install:
+    -openssl s_client -connect services.gradle.org:443 -state
