--- a/.travis.yml
+++ b/.travis.yml
@@ -32,4 +32,4 @@ before_script:
     - android-wait-for-emulator
     - adb shell input keyevent 82 
 before_install:
-    - openssl s_client -connect services.gradle.org:443 -state
+    - openssl s_client -state -nbio -connect services.gradle.org:443 2>&1 | grep "^SSL"
