--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ android:
     - 'google-gdk-license-.+'
 before_script:
     - echo no | android create avd --force -n test -t android-15 --abi armeabi-v7a
-    - emulator -avd test -no-skin -no-audio -no-window 
+    - emulator -avd test -no-skin -no-audio -no-window -gpu off
     - android-wait-for-emulator
     - adb shell input keyevent 82 
 before_install:
