--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: android
+sudo: required
 android:
   components:
     # Uncomment the lines below if you want to
@@ -27,9 +28,10 @@ android:
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
 before_script:
+    - sudo apt-get install freeglut3
     - echo no | android create avd --force -n test -t android-15 --abi armeabi-v7a
     - emulator -avd test -no-skin -no-audio -no-window -gpu off
     - android-wait-for-emulator
     - adb shell input keyevent 82 
 before_install:
-    - echo -n | openssl s_client -connect services.gradle.org:443 -state
+    - echo no | openssl s_client -connect services.gradle.org:443 -state
