use android sdk 22

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,10 @@ android:
     # - tools
 
     # The BuildTools version used by your project
-    - build-tools-19.1.0
+    - build-tools-22.0.1
 
     # The SDK version used to compile your project
-    - android-15
+    - android-22
 
     # Additional components
     - extra-google-google_play_services
@@ -49,9 +49,9 @@ after_failure:
   # - echo 'FAILURE'
   # Check apt configuration: http://docs.travis-ci.com/user/ci-environment/#apt-configuration
   # Comment out the lines below to show log about tests with app name customized on exports section.
-  - sudo apt-get install -qq lynx
-  - export MOD_NAME=yourappmodulename
-  - export LOG_DIR=${TRAVIS_BUILD_DIR}/${MOD_NAME}/build/outputs/reports/androidTests/connected/
-  - lynx --dump ${LOG_DIR}com.android.builder.testing.ConnectedDevice.html > myConnectedDevice.log
-  - lynx --dump ${LOG_DIR}com.android.builder.testing.html > myTesting.log
-  - for file in *.log; do echo "$file"; echo "====================="; cat "$file"; done || true
+  # - sudo apt-get install -qq lynx
+  # - export MOD_NAME=yourappmodulename
+  # - export LOG_DIR=${TRAVIS_BUILD_DIR}/${MOD_NAME}/build/outputs/reports/androidTests/connected/
+  # - lynx --dump ${LOG_DIR}com.android.builder.testing.ConnectedDevice.html > myConnectedDevice.log
+  # - lynx --dump ${LOG_DIR}com.android.builder.testing.html > myTesting.log
+  # - for file in *.log; do echo "$file"; echo "====================="; cat "$file"; done || true
