--- a/.travis.yml
+++ b/.travis.yml
@@ -73,7 +73,8 @@ before_install:
     - echo no | openssl s_client -connect services.gradle.org:443 -state
 script:
     # By default Travis-ci executes './gradlew build connectedCheck' if no 'script:' section found.
-    - ./gradlew build connectedCheck 
+    #- ./gradlew build connectedCheck 
+    - mvn install -Pintegration-tests -Dandroid.device=test 
 after_failure:
   # - echo 'FAILURE'
   # Check apt configuration: http://docs.travis-ci.com/user/ci-environment/#apt-configuration
