--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,17 @@
 apply plugin: 'com.android.application'
+apply plugin: 'maven'
+
+uploadArchives {
+    repositories.mavenDeployer {
+        def deployPath = file(getProperty('aar.deployPath'))
+        repository(url: "file://${deployPath.absolutePath}")
+        pom.project {
+            groupId 'com.travis'
+            artifactId 'travis-sdk'
+            version "1.0.0"
+        }
+    }
+}
 
 android {
     compileSdkVersion 22
@@ -22,6 +35,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile ('junit:junit:4.12')
+    compile 'com.squareup.retrofit:retrofit:1.6.1'
+    //compile 'com.travis:travis-sdk:1.0.0'
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.google.android.gms:play-services:6.1.71'
 }
